--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">Musicify</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_activity_sign_in">Sign In</string>
+    <string name="title_activity_register">Register</string>
+
+    <string name="username">Username</string>
 
 </resources>
