--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_sign_in">Sign In</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_recommended_artists">Recommended Artists</string>
+    <string name="title_activity_genre">Pick a genre</string>
     <string name="action_sign_out">Sign Out</string>
 
     <string name="username">Username</string>
